Mejoras de Ui y encapsulamiento